# linalg-from-scratch-template

./: .gitignore  README.md  ai_diary.md  your_results.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cpp-tests.yml  python-tests.yml
cpp/: CMakeLists.txt  run-benchmarks.ps1  run-benchmarks.sh
cpp/bench/: benchmark.cpp
cpp/include/: matrix.hpp  matrix_debug.hpp
cpp/src/: matrix.cpp  matrix_debug.cpp
cpp/tests/: test_experiments.cpp  test_matrix.cpp
docs/: 00-getting-started.md  01-python-matrix-class.md  02-python-tests.md  03-python-three-matmuls.md  04-python-benchmarking.md  05-python-vs-numpy.md  05b-cpp-build-system.md  06-cpp-matrix-class.md  07-cpp-three-matmuls.md  08-cpp-vs-eigen.md  09-final-comparison.md  setup-macos.md  setup-ubuntu.md  setup-windows.md
python/: pyproject.toml
python/bench/: benchmark.py  plot_results.py
python/matrix/: __init__.py  debug.py  matrix.py
python/tests/: test_experiments.py  test_matrix.py
